Dashboard Integrated To The Tab, Double Vertical Scrollbar Issue Fixed. Table Stripped color Changed. After upload and analyze, next tab is showing by default

--- a/fraud-analytics/css/dashboard.css
+++ b/fraud-analytics/css/dashboard.css
@@ -27,6 +27,7 @@
 	background: #e2dfdf;
 	padding-top: 0.5em;
 	padding-bottom: 1em;
+	position: relative;
 }
 .panel-bg-gradient {
     position: relative;
