--- a/fraud-analytics/css/new.css
+++ b/fraud-analytics/css/new.css
@@ -5,12 +5,11 @@
   box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
-#tab-section * {
+#tab-section label {
 	position: relative;
 }
 section#tab-section {
   background: #FFFFFF;
-  min-height: 100rem;
   margin: 4rem auto;
   box-shadow: 0 0 6px rgba(0,0,0,.4);
   color: #000;
